Gral: Se crea action-bar y se agrega a las vistas

--- a/AppPersonasTemplate/src/app/feature/empleados/crear-empleados/crear-empleados.component.css
+++ b/AppPersonasTemplate/src/app/feature/empleados/crear-empleados/crear-empleados.component.css
@@ -1,1 +1,25 @@
 /* Add mobile styles for the component here.  */
+.form {
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 20;
+}
+
+.input-field {
+    width: 80%;
+}
+
+.label {
+    font-weight: bold;
+    font-family: 'Oswald', 'Oswald-Regular', 'Oswald-Bold';
+}
+
+.input {
+    border-bottom-width: 2;
+    width: 100%;
+}
+
+Button {
+    width: 80%;
+}
