--- a/AppPersonasTemplate/src/app/feature/empleados/listar-empleados/listar-empleados.component.html
+++ b/AppPersonasTemplate/src/app/feature/empleados/listar-empleados/listar-empleados.component.html
@@ -1,3 +1,4 @@
+<ns-action-bar title="List of employees"></ns-action-bar>
 <StackLayout>
     <Button text="Crear nuevo empleado!" class="btn btn-primary" (tap)="goCrearEmpleado()"></Button>
     <FlexboxLayout flexDirection="column">
