--- a/AppPersonasTemplate/src/app/login/login/login.component.html
+++ b/AppPersonasTemplate/src/app/login/login/login.component.html
@@ -1,17 +1,17 @@
 <FlexboxLayout class="page">
     <StackLayout class="form">
-        <Image class="logo" src="~/images/logo.png"></Image>
-        <Label class="header" text="APP NAME"></Label>
+        <Image class="logo" src="res://tienda" loadMode="async" stretch="aspectFit"></Image>
+        <Label class="header" text="EMPLEADOS"></Label>
 
         <PreviousNextView>
             <GridLayout rows="auto, auto, auto">
                 <StackLayout row="0" class="input-field">
-                    <TextField class="input" hint="Usuario" [isEnabled]="!processing" autocorrect="false" autocapitalizationType="none" [(ngModel)]="user.usuario" returnKeyType="next" (returnPress)="focusPassword()"></TextField>
+                    <TextField class="input" hint="Usuario" [isEnabled]="!processing" autocorrect="false" autocapitalizationType="none" [(ngModel)]="usuario" returnKeyType="next" (returnPress)="focusPassword()"></TextField>
                     <StackLayout class="hr-light"></StackLayout>
                 </StackLayout>
 
                 <StackLayout row="1" class="input-field">
-                    <TextField #password class="input" [isEnabled]="!processing" hint="Clave" secure="true" [(ngModel)]="user.clave" [returnKeyType]="isLoggingIn ? 'done' : 'next'"></TextField>
+                    <TextField #password class="input" [isEnabled]="!processing" hint="Clave" secure="true" [(ngModel)]="clave" [returnKeyType]=" 'done' "></TextField>
                     <StackLayout class="hr-light"></StackLayout>
                 </StackLayout>
 
@@ -19,7 +19,7 @@
             </GridLayout>
         </PreviousNextView>
 
-        <Button [text]="'Log In' " [isEnabled]="!processing" (tap)="submit()" class="btn btn-primary m-t-20"></Button>
+        <Button [text]="'Ingresar' " [isEnabled]="!processing" (tap)="submit()" class="btn btn-primary m-t-20"></Button>
 
     </StackLayout>
 
