--- a/AppPersonasTemplate/src/app/login/login/login.component.html
+++ b/AppPersonasTemplate/src/app/login/login/login.component.html
@@ -1,27 +1,21 @@
 <FlexboxLayout class="page">
-    <StackLayout class="form">
-        <Image class="logo" src="res://tienda" loadMode="async" stretch="aspectFit"></Image>
-        <Label class="header" text="EMPLEADOS"></Label>
 
-        <PreviousNextView>
-            <GridLayout rows="auto, auto, auto">
-                <StackLayout row="0" class="input-field">
-                    <TextField class="input" hint="Usuario" [isEnabled]="!processing" autocorrect="false" autocapitalizationType="none" [(ngModel)]="usuario" returnKeyType="next" (returnPress)="focusPassword()"></TextField>
-                    <StackLayout class="hr-light"></StackLayout>
-                </StackLayout>
-
-                <StackLayout row="1" class="input-field">
-                    <TextField #password class="input" [isEnabled]="!processing" hint="Clave" secure="true" [(ngModel)]="clave" [returnKeyType]=" 'done' "></TextField>
-                    <StackLayout class="hr-light"></StackLayout>
-                </StackLayout>
-
-                <ActivityIndicator rowSpan="3" [busy]="processing"></ActivityIndicator>
-            </GridLayout>
-        </PreviousNextView>
-
-        <Button [text]="'Ingresar' " [isEnabled]="!processing" (tap)="submit()" class="btn btn-primary m-t-20"></Button>
-
-    </StackLayout>
-
-
+    <Image class="logo" src="res://tienda" loadMode="async" stretch="aspectFit"></Image>
+    <Label class="header" text="EMPLEADOS"></Label>
+    <PreviousNextView>
+        <GridLayout rows="auto, auto, auto">
+            <RadDataForm id='formData' tkExampleTitle tkToggleNavButton [source]="person" [isEnabled]="!processing" (propertyValidate)="onPropertyValidate($event)" (propertyValidated)="onPropertyValidated($event)">
+                <TKEntityProperty tkDataFormProperty name="usuario" index="0">
+                    <TKNonEmptyValidator tkEntityPropertyValidators errorMessage="Este campo es requerido"></TKNonEmptyValidator>
+                </TKEntityProperty>
+                <TKEntityProperty tkDataFormProperty name="clave" index="1">
+                    <TKPropertyEditor tkEntityPropertyEditor type="clave"></TKPropertyEditor>
+                    <TKMinimumLengthValidator tkEntityPropertyValidators length="6" errorMessage="Este campo es requerido y debe tener 6 caracteres"></TKMinimumLengthValidator>
+                </TKEntityProperty>
+            </RadDataForm>
+        </GridLayout>
+        <ActivityIndicator rowSpan="3" [busy]="processing"></ActivityIndicator>
+    </PreviousNextView>
+    <Label [text]="text" textWrap="true" margin="12"></Label>
+    <Button [text]="'Ingresar' " [isEnabled]="!processing" (tap)="submit()" class="btn btn-primary m-t-20"></Button>
 </FlexboxLayout>
