GRAL : Se crea sidedrawer y se agrega icono para activarlo en el action bar

--- a/AppPersonasTemplate/src/app/app.component.html
+++ b/AppPersonasTemplate/src/app/app.component.html
@@ -1,2 +1,8 @@
-<!-- https://docs.nativescript.org/angular/core-concepts/angular-navigation.html#page-router-outlet -->
-<page-router-outlet></page-router-outlet>
+<RadSideDrawer>
+    <StackLayout tkDrawerContent class=".drawer-container">
+        <Button text="Salir" class="btn" nsRouterLink="/" [clearHistory]="true" (tap)="logout()"></Button>
+    </StackLayout>
+    <StackLayout tkMainContent>
+        <page-router-outlet></page-router-outlet>
+    </StackLayout>
+</RadSideDrawer>
