--- a/AppPersonasTemplate/src/app.css
+++ b/AppPersonasTemplate/src/app.css
@@ -23,3 +23,19 @@ The following CSS rule changes the font size of all Buttons that have the
 Button.-primary {
     font-size: 18;
 }
+
+.btn {
+    background: #ff1744;
+    border-width: 1;
+    border-color: #ff1744;
+    color: white;
+    width: 100%;
+    padding: 5 10;
+    border-radius: 30%;
+    margin: 5 0;
+}
+
+.drawer-container {
+    background: linear-gradient(140deg, #E1E2E1, #ff1744);
+    width: 80%;
+}
