--- a/AppPersonasTemplate/src/app/app.component.html
+++ b/AppPersonasTemplate/src/app/app.component.html
@@ -1,8 +1,27 @@
 <RadSideDrawer>
-    <StackLayout tkDrawerContent class=".drawer-container">
-        <Button text="Salir" class="btn" nsRouterLink="/" [clearHistory]="true" (tap)="logout()"></Button>
+    <StackLayout tkDrawerContent class="drawer-container">
+        <StackLayout class="sidedrawer-header">
+			<Label text="User Name"></Label>
+			<Label text="username@mail.com"></Label>
+        </StackLayout>
+        <ScrollView>
+			<StackLayout class="sidedrawer-content">
+				<GridLayout columns="auto, *" class="sidedrawer-list-item">
+					<Label col="0" text="&#xf015;" class="fa"></Label>
+					<Label col="1" text="Home" nsRouterLink="/home" [clearHistory]="true" (tap)="tapDrawer()"  class="p-r-10"></Label>
+				</GridLayout>
+
+				<GridLayout columns="auto, *" class="sidedrawer-list-item">
+					<Label col="0" text="&#xf1ea;" class="fa"></Label>
+					<Label col="1" text="Crear Empleado" nsRouterLink="/home/crear" pageTransition="slideLeft" (tap)="tapDrawer()"  class="p-r-10"></Label>
+				</GridLayout>
+
+				<GridLayout columns="auto, *" class="sidedrawer-list-item">
+					<Label col="0" text="&#xf013;" class="fa"></Label>
+					<Label col="1" text="Salir" nsRouterLink="/" [clearHistory]="true" (tap)="tapDrawer()" class="p-r-10"></Label>
+				</GridLayout>
+			</StackLayout>
+		</ScrollView>
     </StackLayout>
-    <StackLayout tkMainContent>
-        <page-router-outlet></page-router-outlet>
-    </StackLayout>
+    <page-router-outlet tkMainContent class="page-content"></page-router-outlet>
 </RadSideDrawer>
